--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,6 +251,8 @@ jobs:
             # Your code here
             cd backend
             npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
             # Run and save the migration output
             npm run migrations >> migration_status.txt
       - run:
